section4 done but button text and icon alignment issue

--- a/style.css
+++ b/style.css
@@ -193,3 +193,39 @@ section{
     display: flex;
     /* jani na kemne display flex deyate image er text aligned hoye gelo akta line e, supports session e jigassha korte hobe. */
 }
+#section4{
+    border-radius: 12px;
+    margin: 0px 120px 120px;
+    background: rgba(247, 246, 242, 1);
+    text-align: center;
+    padding: 80px 40px;
+}
+#section4 .section4-text h1{
+    color:rgba(0, 25, 49, 1);
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+#section4 .section4-text p{
+    color:rgba(98, 115, 130, 1);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 24px;
+}
+#section4 .section4-button button{
+background-color: rgba(70, 145, 101, 1);
+border: none;
+padding: 16.5px 16px;
+border-radius: 4px;
+box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+color: rgba(255, 255, 255, 1);
+font-size: 16px;
+font-weight: 600;
+margin-bottom: 16px;
+}
+#section4 .section4-txt{
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(98, 115, 130, 1);
+}
